[workspace]
members = ["canonical-errors-macros"]

[package]
name = "canonical-errors"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
canonical-errors-macros = { path = "canonical-errors-macros" }
gts-id = "0.8.2"
gts-macros = "0.8.2"
gts = "0.8.2"
schemars = "1.2.1"
